--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -151,8 +151,8 @@
       <tr>
 	<td><input type="checkbox" name="ids" value="{{ lens.id }}"></td>
 	<td class="td-center"><a href="">{{lens.name}}</td>
-	<td class="td-center">{{lens.zlens|floatformat:2}}</td>
-	<td class="td-center">{{lens.zsource|floatformat:2}}</td>
+	<td class="td-center">{{lens.z_lens|floatformat:2}}</td>
+	<td class="td-center">{{lens.z_source|floatformat:2}}</td>
 	<td class="td-center">{{lens.ra|floatformat:5}}</td>
 	<td class="td-center">{{lens.dec|floatformat:5}}</td>
 	<td class="td-center">{{lens.access_level}}</td>
