--- a/templates/lens_detail.html
+++ b/templates/lens_detail.html
@@ -18,8 +18,8 @@
             <tr>
                 <td class="td-center">{{lens.ra|floatformat:5}}</td>
                 <td class="td-center">{{lens.dec|floatformat:5}}</td>
-                <td class="td-center">{{lens.zlens|floatformat:4}}</td>
-                <td class="td-center">{{lens.zsource|floatformat:4}}</td>
+                <td class="td-center">{{lens.z_lens|floatformat:4}}</td>
+                <td class="td-center">{{lens.z_source|floatformat:4}}</td>
                 <td class="td-center">{{lens.owner}}</td>
             </tr>
         </table>
