--- a/templates/lens_update.html
+++ b/templates/lens_update.html
@@ -12,11 +12,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'lenses/css/lens_visit_card.css' %}"/>
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 
-{% if request.resolver_match.url_name == 'lens-add' %}
-<h1>Add new lenses</h1>
-{% else %}
 <h1>Update lenses</h1>
-{% endif %}
 
 <p>
   To be within the check radius of existing lenses set RA= 8.368 and DEC= -5.6694
@@ -27,6 +23,7 @@
     {% csrf_token %}
     {{ lens_formset.management_form }}
     {{ lens_formset.non_field_errors }}
+    <input type="hidden" name="check" value="true">
     
     <table class="master">
       {% for form,existing in new_existing %}
