--- a/templates/simple_message.html
+++ b/templates/simple_message.html
@@ -1,4 +1,6 @@
 {% extends 'master_header.html' %}
 {% block content %}
-{{ message }}
+<div class="message">
+  {{ message }}
+</div>
 {% endblock content %}
