--- a/templates/lens_list_executive.html
+++ b/templates/lens_list_executive.html
@@ -37,6 +37,6 @@
    	  event.preventDefault();
       }
   };
-  var form = document.getElementById("ids-form")
+  var form = document.getElementById("ids-form");
   form.addEventListener("submit", my_func, true);
 </script>
