Some aesthetical changes to user profile.

--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -1,35 +1,14 @@
 {% extends 'master_header.html' %}
 {% block content %}
+<style>
+  .notifications td {margin:0px;padding:2px;}
+</style>
+
 
 <div class="section">
   <h1>User Profile page</h1>
 </div>
 
-<!--<div class="content container">
-    <div id="form_container">
-      
-      <form id="form_57258" class="appnitro"  method="get" action="">
-        <div class="form_description">
-          <p>Input Ra and Dec coordinates for more detailed search</p>
-        </div>
-	
-        <div>
-          <label class="description" for="ra_min">Ra min </label>
-          <input id="ra_min" name="ra_min" class="element text medium" type="text" maxlength="255" value=""/>
-          <label class="description" for="ra_max">Ra max </label>
-          <input id="ra_max" name="ra_max" class="element text medium" type="text" maxlength="255" value=""/>
-          <label class="description" for="dec_min">Dec min </label>
-          <input id="dec_min" name="dec_min" class="element text medium" type="text" maxlength="255" value=""/>
-          <label class="description" for="dec_max">Dec max </label>
-          <input id="dec_max" name="dec_max" class="element text medium" type="text" maxlength="255" value=""/>
-	  
-          <input type="hidden" name="form_id" value="57257" />
-          <input id="saveForm" class="button_text" type="submit" name="submit" value="Submit" />
-          <input id="saveForm" class="button_text" type="submit" name="download" value="Download" />
-        </div>
-      </form>
-    </div>
-</div>-->
 
 <div class="section">
   <h1>My details</h1>
@@ -71,6 +50,8 @@
 
 <div class="section">
   <h1>Pending Confirmation tasks</h1>
+</div>
+<div>
   {% if N_tasks > 0 %}
   <table class="sortable">
     <thead>
@@ -101,8 +82,10 @@
 
 <div class="section">
   <h1>New Notifications</h1>
+</div>
+<div>
   {% if unread_notifications %}
-  <table class="sortable">
+  <table class="notifications sortable">
     <thead>
       <tr>
 	<th>Sender</th>
