--- a/templates/lens_give_revoke_access.html
+++ b/templates/lens_give_revoke_access.html
@@ -5,30 +5,68 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script type="text/javascript" src="{% static 'lenses/js/autocomplete.js' %}"></script>
 
-<script type="text/javascript" src="{% static 'lenses/js/lens_give_access.js' %}"></script>
+<script>
+  $(document).ready(function(){
+      users_autocomplete("users-autocomplete");
+      groups_autocomplete("groups-autocomplete");
+  });
+</script>
 
+
+{% if mode == 'give' %}
 <h1>Give access to private lenses</h1>
-
 <p>
   Share your secrets!
 </p>
+{% else %}
+<h1>Revoke access from private lenses</h1>
+<p>
+  Some things must remain secrete!
+</p>
+{% endif %}
+
+
 
 <div class="content">
   <form id="ids-form" method="POST">
     <span class="errorlist">{{ error_message }}</span>
-    
-    <div style="width:100%;border:1px solid black">
+
+
+    <div style="width:100%;">
+      <p>
+	Users:
+      </p>
       <select id="users-autocomplete" class="js-example-data-ajax" name="users" multiple></select>
     </div>
 
+    <br>
+    <br>
+    
+    <div style="width:100%;">
+      <p>
+	Groups:
+      </p>
+      <select id="groups-autocomplete" class="js-example-data-ajax" name="groups" multiple></select>
+    </div>
+
+    <br>
+    <br>
+    
     {% include "lens_list_executive.html" with lenses=lenses %}
 
   </form>
 </div>
 
 <div>
-  <button type="submit" id="submit-btn" form="ids-form">Confirm giving access</button>
+  <button type="submit" id="submit-btn" form="ids-form">
+    {% if mode == 'give' %}
+    Give access
+    {% else %}
+    Revoke access
+    {% endif %}
+  </button>
 </div>
 
 <script>
