Added makePrivate functionality. Fixed adding view permission only for private lenses.

--- a/templates/lens_cede_ownership.html
+++ b/templates/lens_cede_ownership.html
@@ -54,7 +54,7 @@
     {% include "lens_list_executive.html" with lenses=lenses %}
 
     <div>
-      <textarea name="reason" placeholder="Any message for the new owner?" cols="60" rows="3"></textarea>
+      <textarea name="justification" placeholder="Any message for the new owner?" cols="60" rows="3"></textarea>
     </div>
     
   </form>
