--- a/templates/lens_visit_card.html
+++ b/templates/lens_visit_card.html
@@ -4,7 +4,7 @@
       <td>
 	<!-- Lens parameters -->
 	<h3>{{ lens.name }}</h3>
-	<table>
+	<table class="properties">
 	  <tr><td>RA:</td><td>{{ lens.ra }}</td></tr>
 	  <tr><td>DEC:</td><td>{{ lens.dec }}</td></tr>
 	  <tr><td>Created at:</td><td>{{ lens.created_at }}</td></tr>
