--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -30,7 +30,7 @@
 
 
 <div class="section">
-  <h1>My groups ({{ user.getGroupsIsMember|length }}) </h1>
+  <h1>My Groups</h1>
 </div>
 <div class="content container">
   <table class="sortable">
@@ -50,7 +50,7 @@
 
 
 <div class="section">
-  <h1>Pending Confirmation tasks ({{ N_tasks }})</h1>
+  <h1>Pending Confirmation Tasks ({{ N_tasks }})</h1>
 </div>
 <div>
   {% if N_tasks > 0 %}
@@ -115,7 +115,7 @@
 
 
 <div class="section">
-  <h1>My lenses ({{ lenses|length }}) </h1>
+  <h1>My Lenses ({{ lenses|length }}) </h1>
 </div>
 
 <div class="content ">
