Added the page to browse standardized queries and lens collections.

--- a/templates/lens_index.html
+++ b/templates/lens_index.html
@@ -6,9 +6,9 @@
 
   <ul>
     <li><a href="{% url 'lenses:lens-query' %}">Query lenses</a></li>
-    <li>Browse collections</li>
+    <li><a href="{% url 'lenses:lens-collections' %}">Browse collections</a></li>
     <li><a href="{% url 'lenses:lens-add' %}">Add new lenses</a></li>
-    <li><a href="{% url 'users:user-profile' %}">Manage your lenses</li>
+    <li><a href="{% url 'users:user-profile' %}">Manage your lenses</a></li>
   </ul>
 </div>
 
