Included image link in existing add/update. Changes to the query page to make more useful and neater.

--- a/templates/lens_add_update.html
+++ b/templates/lens_add_update.html
@@ -81,7 +81,7 @@
 		<td>
 		  <div class="column">
 		    <table>
-		      <tr><td><div class="lens-mugshot"><img src="" alt="Lens image" /></div></td></tr>
+		      <tr><td><div class="lens-mugshot"><img src="{% static 'lenses/mugshots/'%}{{form.mugshot_name.value}}" style="width: 100%; height: auto;"></div></td></tr>
 		    </table>
 		  </div>
 		</td>
