--- a/templates/lens_visit_card.html
+++ b/templates/lens_visit_card.html
@@ -16,7 +16,7 @@
       <td>
 	<!-- Lens image -->
 	<div class="img-container">
-	  <img src="" alt="Image of a lens" />
+	  <img src="{% static 'lenses/mugshots/'%}{{lens.mugshot_name}}" style="width: 10%; height: auto;">
 	</div>
       </td>
     </tr>
