--- a/templates/lens_query_updated.html
+++ b/templates/lens_query_updated.html
@@ -160,6 +160,10 @@
     {% include "lens_list_executive.html" with lenses=lenses %}    
   </form>
 </div>
+<div class="controls">
+  <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-update' %}">Update lenses</button>
+  <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-collage' %}">See collage</button>
+</div>
 
 <!-- <script type="text/javascript" src="{% static 'lenses/js/lens_add.js' %}"></script> -->
 
