--- a/templates/lens_query.html
+++ b/templates/lens_query.html
@@ -1,64 +1,170 @@
 {% extends 'master_header.html' %}
+{% load static %}
 {% block content %}
 
-<div class="section">
-  <h1>Filter search query for lenses</h1>
-</div>
 
-<div class="content container">
-  <div id="form_container">
-    <div class="form_description">
-      <p>Input Ra and Dec coordinates for more detailed search. To search the opposite area (i.e. across 00hours), put the larger RA as the minimum. </p>
-    </div>
-    <form id="form_57258" class="appnitro"  method="get" action="">
-      <div>
-        <label class="description" for="ra_min">Ra min </label>
-        <input id="ra_min" name="ra_min" class="element text medium" type="text" maxlength="255" value="{{ formvalues.0 }}" />
-        <label class="description" for="ra_max">Ra max </label>
-        <input id="ra_max" name="ra_max" class="element text medium" type="text" maxlength="255" value="{{ formvalues.1 }}"/>
-        <label class="description" for="dec_min">Dec min </label>
-        <input id="dec_min" name="dec_min" class="element text medium" type="text" maxlength="255" value="{{ formvalues.2 }}"/>
-        <label class="description" for="dec_max">Dec max </label>
-        <input id="dec_max" name="dec_max" class="element text medium" type="text" maxlength="255" value="{{ formvalues.3 }}"/>
-        <br>
-        <label class="description" for="n_img_min">Min. number of images </label>
-        <input id="n_img_min" name="n_img_min" class="element text medium" type="text" maxlength="10" value="{{ formvalues.4 }}"/>
-        <label class="description" for="n_img_max">Max. number of images </label>
-        <input id="n_img_max" name="n_img_max" class="element text medium" type="text" maxlength="10" value="{{ formvalues.5 }}"/>
-        <br>
-        <label class="description" for="image_sep_min">Min. image separation </label>
-        <input id="image_sep_min" name="image_sep_min" class="element text medium" type="text" maxlength="10" value="{{ formvalues.6 }}"/>
-        <label class="description" for="image_sep_max">Max. image separation </label>
-        <input id="image_sep_max" name="image_sep_max" class="element text medium" type="text" maxlength="10" value="{{ formvalues.7 }}"/>
-        <br>
-        <label class="description" for="z_source_min">Min. source redshift </label>
-        <input id="z_source_min" name="z_source_min" class="element text medium" type="text" maxlength="10" value="{{ formvalues.8 }}"/>
-        <label class="description" for="z_source_max">Max. source redshift </label>
-        <input id="z_source_max" name="z_source_max" class="element text medium" type="text" maxlength="10" value="{{ formvalues.9 }}"/>
-        <br>
-        <label class="description" for="z_lens_min">Min. lens redshift </label>
-        <input id="z_lens_min" name="z_lens_min" class="element text medium" type="text" maxlength="10" value="{{ formvalues.10 }}"/>
-        <label class="description" for="z_lens_max">Max. lens redshift </label>
-        <input id="z_lens_max" name="z_lens_max" class="element text medium" type="text" maxlength="10" value="{{ formvalues.11 }}"/>
-        <br>
-	
-        <input type="hidden" name="form_id" value="57257" />
-        <input id="saveForm" class="button_text" type="submit" name="submit" value="Submit" />
-        <!--<input id="saveForm" class="button_text" type="submit" name="download" value="Download" />-->
-      </div>
-    </form>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script type="text/javascript" src="{% static 'lenses/js/jquery.formset.js' %}"></script>
+<script type="text/javascript" src="{% static 'lenses/js/lens_add.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+<link rel="stylesheet" type="text/css" href="{% static 'lenses/css/lens_add.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'lenses/css/lens_visit_card.css' %}"/>
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+
+<p>
+  LENS QUERY PAGE
+</p>
+
+
+ <form method="post">
+    {% csrf_token %}
+    <table class="form-table">
+      <tr>
+
+    <td>
+	  <div class="column">
+	  	<table>
+		  	<tr> <td> {{ form.ra_min }} </td> <td> < R.A. < </td> <td>{{ form.ra_max }} </td> </tr> <br>
+		  	<tr> <td> {{ form.dec_min }} </td> <td> < Dec. < </td> <td>{{ form.dec_max }} </td> </tr> <br>
+		  	<tr> <td> {{ form.n_img_min }} </td> <td> < Number of images < </td> <td>{{ form.n_img_max }} </td> </tr> <br>
+		  	<tr> <td> {{ form.image_sep_min }} </td> <td> < Image separation < </td> <td>{{ form.image_sep_max }} </td> </tr> <br>
+		  	<tr> <td> {{ form.z_lens_min }} </td> <td> < Lens Redshift < </td> <td>{{ form.z_lens_max }} </td> </tr> <br>
+		  	<tr> <td> {{ form.z_source_min }} </td> <td> < Source redshift < </td> <td>{{ form.z_source_max }} </td> </tr> <br>
+	  	</table>
+	  </div>
+	</td>
+
+	<td>
+	  <div class="column">
+	    <table>
+	      <tr> <td> Confirmed Lens? </td> <td> {{ form.flag_confirmed }} </td> </tr> <br>
+	      <tr> <td> Not Confirmed Lens? </td> <td> {{ form.flag_unconfirmed }} </td> </tr> <br>
+	      <tr> <td> Confirmed Contaminant? </td> <td> {{ form.flag_contaminant }} </td> </tr>
+	      <tr> <td> Not Confirmed Contaminant? </td> <td> {{ form.flag_uncontaminant }} </td> </tr>
+	      <tr> <td> Lens Type </td> <td>{{ form.lens_type }}</td></tr>
+	      <tr> <td> Source Type </td> <td>{{ form.source_type }}</td></tr>
+	      <tr> <td> Configuration </td> <td>{{ form.image_conf }}</td></tr>
+	    </table>
+	  </div>
+	</td>
+
+	    <!--<table>
+	      <tr><td>{{ form.ra_min.errors }}</td><td>{{ form.ra_min.label_tag }}</td><td>{{ form.ra_min }}</td></tr>
+	      <tr><td>{{ form.ra_max.errors }}</td><td>{{ form.ra_max.label_tag }}</td><td>{{ form.ra_max }}</td></tr>
+	      <tr><td>{{ form.dec.errors }}</td><td>{{ form.dec.label_tag }}</td><td>{{ form.dec }}</td></tr>
+	      <tr><td>{{ form.image_sep.errors }}</td><td>{{ form.image_sep.label_tag }}</td><td>{{ form.image_sep }}</td></tr>
+	      <tr><td>{{ form.z_lens.errors }}</td><td>{{ form.z_lens.label_tag }}</td><td>{{ form.z_lens }}</td></tr>
+	      <tr><td>{{ form.z_source.errors }}</td><td>{{ form.z_source.label_tag }}</td><td>{{ form.z_source }}</td></tr>
+	      <tr><td>{{ form.flag_confirmed.errors }}</td><td>{{ form.flag_confirmed.label_tag }}</td><td>{{ form.flag_confirmed }}</td></tr>
+	      <tr><td>{{ form.flag_contaminant.errors }}</td><td>{{ form.flag_contaminant.label_tag }}</td><td>{{ form.flag_contaminant }}</td></tr>
+	      <tr><td>{{ form.access_level.errors }}</td><td>{{ form.access_level.label_tag }}</td><td>{{ form.access_level }}</td></tr>
+	    </table>-->
+	  </div>
+    
+</tr>
+</table>
+<input type="submit" value="Submit">
+
+</form>
+
+<!--<form id="formset" formset-prefix="{{ lens_formset.prefix }}" method="POST">
+  <div class="form-div">
+    {% csrf_token %}
+    {{ lens_formset.management_form }}
+    {{ lens_formset.non_field_errors }}
+    
+      <tr class="copy-target">
+	<td>
+	  
+	  <div class="lens-form">
+
+	    {{ form.non_field_errors }}
+	    {{ form.id }}
+	    
+	    <table class="form-table">
+	      <tr>
+		First column 
+		<td>
+		  <div class="column">
+		    <table>
+		      <tr><td>{{ form.ra_min.errors }}</td><td>{{ form.ra_min.label_tag }}</td><td>{{ form.ra_min }}</td></tr>
+		      <tr><td>{{ form.dec.errors }}</td><td>{{ form.dec.label_tag }}</td><td>{{ form.dec }}</td></tr>
+		      <tr><td>{{ form.image_sep.errors }}</td><td>{{ form.image_sep.label_tag }}</td><td>{{ form.image_sep }}</td></tr>
+		      <tr><td>{{ form.z_lens.errors }}</td><td>{{ form.z_lens.label_tag }}</td><td>{{ form.z_lens }}</td></tr>
+		      <tr><td>{{ form.z_source.errors }}</td><td>{{ form.z_source.label_tag }}</td><td>{{ form.z_source }}</td></tr>
+		      <tr><td>{{ form.flag_confirmed.errors }}</td><td>{{ form.flag_confirmed.label_tag }}</td><td>{{ form.flag_confirmed }}</td></tr>
+		      <tr><td>{{ form.flag_contaminant.errors }}</td><td>{{ form.flag_contaminant.label_tag }}</td><td>{{ form.flag_contaminant }}</td></tr>
+		      <tr><td>{{ form.access_level.errors }}</td><td>{{ form.access_level.label_tag }}</td><td>{{ form.access_level }}</td></tr>
+		    </table>
+		  </div>
+		</td>
+
+
+		 Second column 
+		<td>
+		  <div class="column">
+		    <table>
+		      <tr><td>{{ form.lens_type.errors }}</td><td>{{ form.lens_type.label_tag }}</td><td>{{ form.lens_type }}</td></tr>
+		      <tr><td>{{ form.source_type.errors }}</td><td>{{ form.source_type.label_tag }}</td><td>{{ form.source_type }}</td></tr>
+		      <tr><td>{{ form.image_conf.errors }}</td><td>{{ form.image_conf.label_tag }}</td><td>{{ form.image_conf }}</td></tr>
+		      <tr><td>{{ form.info.errors }}</td><td colspan="2">{{ form.info }}</td></tr>
+		    </table>
+		  </div>
+		</td>-->
+
+
+		<!-- Fourth column 
+		<td>
+		  <div class="column">
+		    <table>
+		      <tr><td><div class="lens-mugshot"><img src="" alt="Lens image" /></div></td></tr>
+		    </table>
+		  </div>
+		</td>
+
+		
+	      </tr>
+	    </table>
+	  </div>
+	  
+	</td>
+
+      </tr>
+
   </div>
-</div>
+  
+  <div>
+  	<button type="submit" form="ids-form">Submit</button>
+  </div>-->
+  
+  
+  <!--<div class="button-div">
+    <table>
+      <tr>
+	{% if request.resolver_match.url_name == 'lens-add' %}
+	<td><div class="add-button"></div></td>
+	<td><button id="toggle-access-level" type="button">Toggle access_level all</button></td>
+	<td><button type="submit">Create Lenses</button></td>
+	{% else %}
+	<td><button type="submit">Update</button></td>
+	{% endif %}	
+      </tr>
+    </table>
+  </div>
+</form>-->
 
 <div class="content">
   <form id="ids-form" method="POST">
     <span class="errorlist">{{ error_message }}</span>
-    {% include "lens_list_passive.html" with lenses=lenses %}    
+    {% include "lens_list_executive.html" with lenses=lenses %}    
   </form>
 </div>
-
-<div>
-  <button type="submit" form="ids-form">Action X</button>
+<div class="controls">
+  <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-update' %}">Update lenses</button>
+  <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-collage' %}">See collage</button>
 </div>
+
+<!-- <script type="text/javascript" src="{% static 'lenses/js/lens_add.js' %}"></script> -->
 
 {% endblock content %}
