Added collage button to user page as well

--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -132,6 +132,7 @@
   <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-make-public' %}">Make public</button>
   <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-cede-ownership' %}">Cede ownership</button>
   <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-delete' %}">Delete lenses</button>
+  <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-collage' %}">See collage</button>
 </div>
 
 
