Fixed issue with the update submitting although no changes were made.

--- a/templates/lens_add_update.html
+++ b/templates/lens_add_update.html
@@ -26,7 +26,7 @@
   <div class="form-div">
     {% csrf_token %}
     {{ lens_formset.management_form }}
-    {{ lens_formset.non_field_errors }}
+    {{ lens_formset.non_form_errors }}
     
     <table class="master">
       {% for form,existing in new_existing %}
@@ -68,6 +68,7 @@
 		<td>
 		  <div class="column">
 		    <table>
+		      <tr><td>{{ form.n_img.errors }}</td><td>{{ form.n_img.label_tag }}</td><td>{{ form.n_img }}</td></tr>
 		      <tr><td>{{ form.lens_type.errors }}</td><td>{{ form.lens_type.label_tag }}</td><td>{{ form.lens_type }}</td></tr>
 		      <tr><td>{{ form.source_type.errors }}</td><td>{{ form.source_type.label_tag }}</td><td>{{ form.source_type }}</td></tr>
 		      <tr><td>{{ form.image_conf.errors }}</td><td>{{ form.image_conf.label_tag }}</td><td>{{ form.image_conf }}</td></tr>
@@ -81,7 +82,8 @@
 		<td>
 		  <div class="column">
 		    <table>
-		      <tr><td><div class="lens-mugshot"><img src="{% static 'lenses/mugshots/'%}{{form.mugshot_name.value}}" style="width: 100%; height: auto;"></div></td></tr>
+		      <tr><td colspan="3"><div class="lens-mugshot"><img src="{% static 'lenses/mugshots/'%}{{form.mugshot_name.value}}" style="width: 100%; height: auto;"></div></td></tr>
+		      <tr><td>{{ form.mugshot_name.errors }}</td><td>{{ form.mugshot_name.label_tag }}</td><td>{{ form.mugshot_name }}</td></tr>
 		    </table>
 		  </div>
 		</td>
