--- a/templates/lens_index.html
+++ b/templates/lens_index.html
@@ -6,7 +6,7 @@
 
   <ul>
     <li><a href="{% url 'lenses:lens-query' %}">Query lenses</a></li>
-    <li><a href="{% url 'lenses:lens-collections' %}">Browse collections</a></li>
+    <li><a href="{% url 'lenses:lens-all-collections' %}">Browse collections</a></li>
     <li><a href="{% url 'lenses:lens-add' %}">Add new lenses</a></li>
     <li><a href="{% url 'users:user-profile' %}">Manage your lenses</a></li>
   </ul>
