Make collection button added to the query page.

--- a/templates/lens_query.html
+++ b/templates/lens_query.html
@@ -163,6 +163,7 @@
 <div class="controls">
   <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-update' %}">Update lenses</button>
   <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-collage' %}">See collage</button>
+  <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-make-collection' %}">Make collection</button>
 </div>
 
 <!-- <script type="text/javascript" src="{% static 'lenses/js/lens_add.js' %}"></script> -->
