Added generic classes to collection views.

--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -3,6 +3,7 @@
 <style>
   .notifications td {margin:0px;padding:2px;}
   .tasks td {margin:0px;padding:2px;}
+  .collections td {margin:0px;padding:2px;}
 </style>
 
 
@@ -121,14 +122,20 @@
 
 <div class="content ">
   {% if collections %}
-  <table>
+  <table class="collections">
     {% for collection in collections %}
-    <tr><td>{{ collection.name }}</td><td>{{ collection.item_type }}</td><td>{{ collection.description }}</td></tr>
+    <tr>
+      <td><a href="{{ collection.get_absolute_url }}">{{ collection.name }}</a></td>
+      <td>{{ collection.item_type }}</td>
+      <td>{{ collection.description }}</td>
+      <td>{{ collection.myitems.all|length }}</td>
+    </tr>
     {% endfor %}
   </table>
   {% else %}
   <p>No collections to display</p>
   {% endif %}
+   <a href="{% url 'sled_collections:collections-list' %}">All collections</a>
 </div>
 
 
